--- a/pages/home.html
+++ b/pages/home.html
@@ -1,35 +1,109 @@
-
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-  <link rel="stylesheet" href="../public/style.css">
-
-
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
-</head>
-<body>
-  <header>
+<%- include('partials/header.html') %>
+  <!-- Banner -->
+  <section class="noticia-destaque">
     <div class="center">
-
-      <div class="logo">
-        <h2>
-          <span style="font-weight:lighter">Artur</span><b>News</b>
-        </h2>
+      <div class="img-destaque">
+        <div class="overlay-destaque"></div>
+        <div class="title-destaque-descricao">
+          <h2>
+            Quer fugir das praias no verão?
+          </h2>
+          <p>
+            Veja os melhores destinos para uma viagem a dois, com seu grupo ou até mesmo sozinho. Aproveite o calor longe das praias, curta lagos, cachoeiras e muito mais nesses destinos incríveis.
+          </p>
+        </div>
+        <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2073&q=80" alt="imagem de fundo"/>
       </div>
 
-      <div class="form-busca">
-        <form action="">
-          <i class="fa fa-search" aria-hidden="true"></i>
-          <input type="text" name="busca" placeholder="Busca...">
-        </form>
+    </div>
+  </section>
+
+  <!-- Notícias -->
+
+  <section class="outras-noticias">
+    <div class="title-outras-noticias">
+      <h2>
+        Últimas Noticias
+      </h2>
+
+      <br />
+      <div class="center">
+        <div class="ultimas">
+
+          <div class="box-ultima-single">
+            <img src="/public/images/news.jpg" alt="" srcset="">
+            <div class="conteudo-noticia-single">
+              <h3>Natureza e Geral</h3>
+              <h2>Como encarar o Surf em Floripa</h2>
+              <p>
+               A água gelada e o vento pode acabar com a sua felicidade de ir para a água. Cientistas afirmam que a chance de hipotermia é real e você precisa se cuidar. Veja como.
+              </p>
+              <a href="/encarar-o-surf">Saiba Mais</a>
+            </div>
+          </div>
+
+          <div class="box-ultima-single">
+            <img src="/public/images/news.jpg">
+            <div class="conteudo-noticia-single">
+              <h3>Natureza e Geral</h3>
+              <h2>Como encarar o Surf em Floripa</h2>
+              <p>
+               A água gelada e o vento pode acabar com a sua felicidade de ir para a água. Cientistas afirmam que a chance de hipotermia é real e você precisa se cuidar. Veja como. djkdsk ioeuir lk;dsa; dsdasdasdsadada
+              </p>
+              <a href="/encarar-o-surf">Saiba Mais</a>
+            </div>
+          </div>
+
+        </div>
+        <div class="mais-lidas">
+          <h3>Mais lidas</h3>
+          <div class="mais-lidas-noticias">
+            <div class="mais-lidas-noticia-single">
+              <img src="/public/images/NATUREZA1.png">
+              <div class="texto-mais-lida-single">
+                <h4>Natureza</h4>
+                <p>
+                  A importância da floresta do ártico para a biodiversidade mundial. Qual o impacto o degelo na fauna e flora?
+                </p>
+                <a href="/encarar-o-surf">Saiba Mais</a>
+              </div>
+            </div>
+            <div class="mais-lidas-noticia-single">
+              <img src="/public/images/MUNDOANIMAL.png">
+              <div class="texto-mais-lida-single">
+                <h4>Mundo Animal</h4>
+                <p>
+                  Com idade avançada, leão do Parque Dois Irmãos é diagnosticado com câncer e recebe tratamento. Espécie está ameaçada de extinção.
+                </p>
+                <a href="/encarar-o-surf">Saiba Mais</a>
+              </div>
+            </div>
+            <div class="mais-lidas-noticia-single">
+              <img src="/public/images/TECNOLOGIA.png">
+              <div class="texto-mais-lida-single">
+                <h4>Tecnologia</h4>
+                <p>
+                  O impacto do uso de fones de ouvido a longo prazo. Descubra como esse dispositivo pode afetar sua audição sem você nem perceber.
+                </p>
+                <a href="/encarar-o-surf">Saiba Mais</a>
+              </div>
+            </div>
+            <div class="mais-lidas-noticia-single">
+              <img src="/public/images/LIFESTYLE.png">
+              <div class="texto-mais-lida-single">
+                <h4>Lifestyle</h4>
+                <p>
+                  Fazer uma viagem sempre é um momento incrível para a família. Descubra os melhores destinos para 2021.
+                </p>
+                <a href="/encarar-o-surf">Saiba Mais</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+  </section>
 
-  </header>
+  <%- include('partials/footer.html') %>
 </body>
 </html>
