--- a/pages/home.html
+++ b/pages/home.html
@@ -5,14 +5,15 @@
       <div class="img-destaque">
         <div class="overlay-destaque"></div>
         <div class="title-destaque-descricao">
+          <!-- <a href=""></a> -->
           <h2>
-            Quer fugir das praias no verão?
+            <%= posts[0].titulo %>
           </h2>
           <p>
-            Veja os melhores destinos para uma viagem a dois, com seu grupo ou até mesmo sozinho. Aproveite o calor longe das praias, curta lagos, cachoeiras e muito mais nesses destinos incríveis.
+            <%- posts[0].descricaoCurta%>...
           </p>
         </div>
-        <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2073&q=80" alt="imagem de fundo"/>
+        <img src="<%= posts[0].imagem %>" alt="imagem de fundo"/>
       </div>
 
     </div>
@@ -30,74 +31,42 @@
       <div class="center">
         <div class="ultimas">
 
-          <div class="box-ultima-single">
-            <img src="/public/images/news.jpg" alt="" srcset="">
-            <div class="conteudo-noticia-single">
-              <h3>Natureza e Geral</h3>
-              <h2>Como encarar o Surf em Floripa</h2>
-              <p>
-               A água gelada e o vento pode acabar com a sua felicidade de ir para a água. Cientistas afirmam que a chance de hipotermia é real e você precisa se cuidar. Veja como.
-              </p>
-              <a href="/encarar-o-surf">Saiba Mais</a>
-            </div>
-          </div>
+          <% for(let i = 1; i < posts.length; i++) { %>
 
-          <div class="box-ultima-single">
-            <img src="/public/images/news.jpg">
-            <div class="conteudo-noticia-single">
-              <h3>Natureza e Geral</h3>
-              <h2>Como encarar o Surf em Floripa</h2>
-              <p>
-               A água gelada e o vento pode acabar com a sua felicidade de ir para a água. Cientistas afirmam que a chance de hipotermia é real e você precisa se cuidar. Veja como. djkdsk ioeuir lk;dsa; dsdasdasdsadada
-              </p>
-              <a href="/encarar-o-surf">Saiba Mais</a>
+            <div class="box-ultima-single">
+              <img src="<%= posts[i].imagem %>" alt="" srcset="">
+              <div class="conteudo-noticia-single">
+                <h3><%= posts[i].titulo %></h3>
+                <h2><%= posts[i].titulo %></h2>
+                <p>
+                  <%- posts[i].descricaoCurta %>
+                </p>
+                <a href="<%= posts[i].slug %>">Saiba Mais</a>
+              </div>
             </div>
-          </div>
+            <% }
+          %>
+
 
         </div>
         <div class="mais-lidas">
           <h3>Mais lidas</h3>
           <div class="mais-lidas-noticias">
-            <div class="mais-lidas-noticia-single">
-              <img src="/public/images/NATUREZA1.png">
-              <div class="texto-mais-lida-single">
-                <h4>Natureza</h4>
-                <p>
-                  A importância da floresta do ártico para a biodiversidade mundial. Qual o impacto o degelo na fauna e flora?
-                </p>
-                <a href="/encarar-o-surf">Saiba Mais</a>
+            <% for(let i = 0; i < posts.length; i++) { %>
+              <div class="mais-lidas-noticia-single">
+                <img src="/public/images/NATUREZA1.png">
+                <div class="texto-mais-lida-single">
+                  <h4><%= posts[i].categoria %></h4>
+                  <p>
+                    <%- posts[i].descricaoCurta %>
+                  </p>
+                  <a href="/encarar-o-surf">Saiba Mais</a>
+                </div>
               </div>
-            </div>
-            <div class="mais-lidas-noticia-single">
-              <img src="/public/images/MUNDOANIMAL.png">
-              <div class="texto-mais-lida-single">
-                <h4>Mundo Animal</h4>
-                <p>
-                  Com idade avançada, leão do Parque Dois Irmãos é diagnosticado com câncer e recebe tratamento. Espécie está ameaçada de extinção.
-                </p>
-                <a href="/encarar-o-surf">Saiba Mais</a>
-              </div>
-            </div>
-            <div class="mais-lidas-noticia-single">
-              <img src="/public/images/TECNOLOGIA.png">
-              <div class="texto-mais-lida-single">
-                <h4>Tecnologia</h4>
-                <p>
-                  O impacto do uso de fones de ouvido a longo prazo. Descubra como esse dispositivo pode afetar sua audição sem você nem perceber.
-                </p>
-                <a href="/encarar-o-surf">Saiba Mais</a>
-              </div>
-            </div>
-            <div class="mais-lidas-noticia-single">
-              <img src="/public/images/LIFESTYLE.png">
-              <div class="texto-mais-lida-single">
-                <h4>Lifestyle</h4>
-                <p>
-                  Fazer uma viagem sempre é um momento incrível para a família. Descubra os melhores destinos para 2021.
-                </p>
-                <a href="/encarar-o-surf">Saiba Mais</a>
-              </div>
-            </div>
+              <% }
+            %>
+
+
           </div>
         </div>
       </div>
